Make sure we don't store invalid events from Facebook

BUG: 316731